--- a/MoviesList/Base.lproj/Main.storyboard
+++ b/MoviesList/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                                                             <color key="shadowColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" systemColor="systemMintColor"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstItem="BsC-hM-PIs" firstAttribute="top" secondItem="akR-Yw-tTR" secondAttribute="top" constant="16" id="DdU-Qe-5Rh"/>
                                                         <constraint firstItem="BsC-hM-PIs" firstAttribute="leading" secondItem="akR-Yw-tTR" secondAttribute="leading" constant="23" id="Jrl-ao-oLD"/>
@@ -107,6 +107,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" systemColor="secondaryLabelColor"/>
                         <constraints>
                             <constraint firstItem="6UU-2N-VKJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3jd-7u-FhZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6UU-2N-VKJ" secondAttribute="trailing" id="Mff-Az-42N"/>
@@ -132,22 +133,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TagLine" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tpi-5U-tAb">
-                                <rect key="frame" x="16" y="795.66666666666663" width="361" height="22.333333333333371"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="34" y="795.66666666666663" width="325" height="22.333333333333371"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Italic" family="Helvetica Neue" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BaZ-wm-zeD">
-                                <rect key="frame" x="296" y="333.33333333333331" width="35" height="35"/>
+                                <rect key="frame" x="300" y="333.33333333333331" width="31" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="FLZ-ef-VWa"/>
-                                    <constraint firstAttribute="width" constant="35" id="p92-0D-xWZ"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain">
-                                    <backgroundConfiguration key="background" cornerRadius="7">
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <backgroundConfiguration key="background">
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </backgroundConfiguration>
                                 </buttonConfiguration>
                                 <connections>
@@ -158,7 +157,7 @@
                                 <rect key="frame" x="300" y="344" width="35" height="35"/>
                                 <color key="tintColor" systemColor="systemPinkColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="35" id="9tX-hc-8f6"/>
+                                    <constraint firstAttribute="width" constant="35" id="Ijt-rM-wIt"/>
                                     <constraint firstAttribute="height" constant="35" id="kAz-2c-ZGm"/>
                                 </constraints>
                             </imageView>
@@ -230,7 +229,7 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1DV-jR-Wt4">
-                                <rect key="frame" x="34" y="347.33333333333331" width="212" height="28"/>
+                                <rect key="frame" x="34" y="347.33333333333331" width="216" height="28"/>
                                 <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -241,17 +240,18 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <color key="tintColor" red="0.93085798249999996" green="0.99794776399999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="jdQ-1t-fT7" firstAttribute="leading" secondItem="1DV-jR-Wt4" secondAttribute="trailing" constant="50" id="0Sb-qy-GGy"/>
                             <constraint firstItem="C7G-sJ-8Oj" firstAttribute="trailing" secondItem="xsb-0l-D0g" secondAttribute="trailing" id="14o-w9-sdk"/>
                             <constraint firstItem="BaZ-wm-zeD" firstAttribute="leading" secondItem="1DV-jR-Wt4" secondAttribute="trailing" constant="50" id="1lO-d4-VZs"/>
                             <constraint firstItem="hTQ-F8-uE3" firstAttribute="leading" secondItem="BaZ-wm-zeD" secondAttribute="trailing" constant="12" id="6zI-SH-Lr7"/>
                             <constraint firstItem="hTQ-F8-uE3" firstAttribute="leading" secondItem="jdQ-1t-fT7" secondAttribute="trailing" constant="8" symbolic="YES" id="7GH-OD-Qn2"/>
+                            <constraint firstItem="tpi-5U-tAb" firstAttribute="leading" secondItem="1DV-jR-Wt4" secondAttribute="leading" id="99y-OB-L3G"/>
                             <constraint firstItem="C7G-sJ-8Oj" firstAttribute="top" secondItem="1DV-jR-Wt4" secondAttribute="bottom" constant="33" id="GgD-eP-smB"/>
                             <constraint firstItem="xsb-0l-D0g" firstAttribute="trailing" secondItem="LB4-yo-O7Z" secondAttribute="trailing" constant="10" id="Hbf-bO-RgZ"/>
                             <constraint firstItem="tpi-5U-tAb" firstAttribute="centerX" secondItem="C7G-sJ-8Oj" secondAttribute="centerX" id="IxX-hF-Rk3"/>
                             <constraint firstItem="LB4-yo-O7Z" firstAttribute="centerY" secondItem="jdQ-1t-fT7" secondAttribute="centerY" id="M9c-SX-N5K"/>
                             <constraint firstItem="1DV-jR-Wt4" firstAttribute="leading" secondItem="xsb-0l-D0g" secondAttribute="leading" constant="34" id="NGb-qB-G7q"/>
                             <constraint firstItem="xsb-0l-D0g" firstAttribute="trailing" secondItem="hTQ-F8-uE3" secondAttribute="trailing" constant="10" id="P17-pA-N41"/>
-                            <constraint firstItem="tpi-5U-tAb" firstAttribute="leading" secondItem="SJS-LF-wlW" secondAttribute="leadingMargin" id="Ve4-hR-frl"/>
                             <constraint firstItem="LB4-yo-O7Z" firstAttribute="top" secondItem="xsb-0l-D0g" secondAttribute="top" constant="282.33333333333331" id="YBh-Ao-Sum"/>
                             <constraint firstItem="xsb-0l-D0g" firstAttribute="bottom" secondItem="tpi-5U-tAb" secondAttribute="bottom" id="YlW-Sg-R3N"/>
                             <constraint firstItem="C7G-sJ-8Oj" firstAttribute="leading" secondItem="xsb-0l-D0g" secondAttribute="leading" id="Ziv-F9-50r"/>
@@ -278,7 +278,6 @@
         <!--Navigation Controller-->
         <scene sceneID="A6H-Fx-cwS">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZQU-TL-WL4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wpp-24-DCa" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="bB0-dW-jgr"/>
@@ -291,11 +290,15 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="k5k-Ly-d8s"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZQU-TL-WL4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4753.4351145038163" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="secondarySystemGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
@@ -307,9 +310,6 @@
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemMintColor">
-            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
