--- a/MoviesList/Base.lproj/Main.storyboard
+++ b/MoviesList/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
                                 </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="C7G-sJ-8Oj">
-                                <rect key="frame" x="0.0" y="402.66666666666674" width="375" height="327"/>
+                                <rect key="frame" x="0.0" y="402.66666666666674" width="375" height="343"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailCell" rowHeight="60" id="9E5-bf-vtf" customClass="DetailCell" customModule="MoviesList" customModuleProvider="target">
@@ -186,17 +186,21 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desc" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wbs-PO-HhN">
-                                                    <rect key="frame" x="34" y="20" width="40.666666666666657" height="21"/>
-                                                    <fontDescription key="fontDescription" name="GeezaPro-Bold" family="Geeza Pro" pointSize="17"/>
+                                                    <rect key="frame" x="34" y="20" width="43.333333333333343" height="22.333333333333329"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="3hj-z5-nmz"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="GeezaPro-Bold" family="Geeza Pro" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VAl" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dHX-oe-gKx">
-                                                    <rect key="frame" x="256" y="20.333333333333336" width="99" height="20.333333333333336"/>
+                                                    <rect key="frame" x="245" y="20.333333333333329" width="110" height="21.666666666666671"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="99" id="cZt-Lu-63b"/>
+                                                        <constraint firstAttribute="width" constant="110" id="cZt-Lu-63b"/>
+                                                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="oba-95-EVC"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -204,7 +208,6 @@
                                             <constraints>
                                                 <constraint firstItem="dHX-oe-gKx" firstAttribute="trailing" secondItem="jsf-di-mFH" secondAttribute="trailingMargin" id="Eol-3u-Df3"/>
                                                 <constraint firstItem="dHX-oe-gKx" firstAttribute="centerY" secondItem="Wbs-PO-HhN" secondAttribute="centerY" id="KkA-lQ-t8t"/>
-                                                <constraint firstAttribute="bottom" secondItem="Wbs-PO-HhN" secondAttribute="bottom" constant="19" id="LEp-UI-8AW"/>
                                                 <constraint firstItem="Wbs-PO-HhN" firstAttribute="top" secondItem="jsf-di-mFH" secondAttribute="topMargin" constant="9" id="ShC-tT-YE7"/>
                                                 <constraint firstItem="Wbs-PO-HhN" firstAttribute="leading" secondItem="jsf-di-mFH" secondAttribute="leading" constant="34" id="pOw-hu-8QG"/>
                                             </constraints>
@@ -282,7 +285,7 @@
                             <constraint firstItem="jdQ-1t-fT7" firstAttribute="bottom" secondItem="BaZ-wm-zeD" secondAttribute="bottom" id="Xh7-Yb-1KT"/>
                             <constraint firstItem="xsb-0l-D0g" firstAttribute="bottom" secondItem="tpi-5U-tAb" secondAttribute="bottom" id="YlW-Sg-R3N"/>
                             <constraint firstItem="C7G-sJ-8Oj" firstAttribute="leading" secondItem="xsb-0l-D0g" secondAttribute="leading" id="Ziv-F9-50r"/>
-                            <constraint firstItem="tpi-5U-tAb" firstAttribute="top" secondItem="C7G-sJ-8Oj" secondAttribute="bottom" constant="26" id="dly-5M-5Iu"/>
+                            <constraint firstItem="tpi-5U-tAb" firstAttribute="top" secondItem="C7G-sJ-8Oj" secondAttribute="bottom" constant="10" id="dly-5M-5Iu"/>
                             <constraint firstItem="jdQ-1t-fT7" firstAttribute="centerX" secondItem="BaZ-wm-zeD" secondAttribute="centerX" id="eao-ox-P4q"/>
                             <constraint firstItem="Gkn-FF-l77" firstAttribute="centerY" secondItem="PGB-tB-Rhh" secondAttribute="centerY" id="ehs-d7-xLf"/>
                             <constraint firstItem="1DV-jR-Wt4" firstAttribute="top" secondItem="xsb-0l-D0g" secondAttribute="top" constant="261" id="hJ2-FY-xFV"/>
