--- a/MoviesList/MovieList/SideMenuHeaderView.xib
+++ b/MoviesList/MovieList/SideMenuHeaderView.xib
@@ -3,7 +3,6 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,34 +13,49 @@
             <rect key="frame" x="0.0" y="0.0" width="192" height="162"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbf-KZ-Fqd">
-                    <rect key="frame" x="138.33333333333334" y="-17" width="43.666666666666657" height="255"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LYA-vO-1XV">
+                    <rect key="frame" x="0.0" y="0.0" width="192" height="162"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbf-KZ-Fqd">
+                            <rect key="frame" x="61" y="81" width="111" height="0.0"/>
+                            <constraints>
+                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="lf9-ky-yj0"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6I8-PJ-sYf">
+                            <rect key="frame" x="5" y="40" width="40" height="42"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="XIj-MN-UhC"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="lLQ-J2-9ue"/>
+                        <constraint firstItem="Jbf-KZ-Fqd" firstAttribute="leading" secondItem="LYA-vO-1XV" secondAttribute="leading" priority="250" constant="61" id="0Ax-Av-0Ui"/>
+                        <constraint firstItem="Jbf-KZ-Fqd" firstAttribute="leading" secondItem="6I8-PJ-sYf" secondAttribute="trailing" constant="16" id="5em-r2-Qzi"/>
+                        <constraint firstItem="6I8-PJ-sYf" firstAttribute="leading" secondItem="LYA-vO-1XV" secondAttribute="leading" constant="5" id="Ae7-7n-BO4"/>
+                        <constraint firstItem="Jbf-KZ-Fqd" firstAttribute="centerY" secondItem="LYA-vO-1XV" secondAttribute="centerY" id="Dm4-sG-vvH"/>
+                        <constraint firstItem="6I8-PJ-sYf" firstAttribute="centerY" secondItem="LYA-vO-1XV" secondAttribute="centerY" id="OAx-S3-Fqr"/>
+                        <constraint firstItem="6I8-PJ-sYf" firstAttribute="centerY" secondItem="Jbf-KZ-Fqd" secondAttribute="centerY" id="fRM-qH-0G3"/>
+                        <constraint firstAttribute="trailing" secondItem="Jbf-KZ-Fqd" secondAttribute="trailing" constant="20" id="um4-Lr-VwH"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="tf0-23-Esd">
-                    <rect key="frame" x="0.0" y="0.0" width="40" height="42"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </imageView>
+                </view>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="tf0-23-Esd" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="3og-dO-BnB"/>
-                <constraint firstItem="Jbf-KZ-Fqd" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="ZIi-gZ-cJK"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Jbf-KZ-Fqd" secondAttribute="trailing" constant="10" id="hCA-zj-6OK"/>
-                <constraint firstItem="Jbf-KZ-Fqd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" priority="250" constant="60" id="w8e-CI-MyK"/>
-                <constraint firstItem="tf0-23-Esd" firstAttribute="firstBaseline" secondItem="Jbf-KZ-Fqd" secondAttribute="firstBaseline" id="wDF-mW-H9I"/>
+                <constraint firstAttribute="bottom" secondItem="LYA-vO-1XV" secondAttribute="bottom" id="7fB-65-raY"/>
+                <constraint firstItem="LYA-vO-1XV" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="E0L-bd-jgi"/>
+                <constraint firstItem="LYA-vO-1XV" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="nVp-qj-7Ip"/>
+                <constraint firstAttribute="trailing" secondItem="LYA-vO-1XV" secondAttribute="trailing" id="neP-mI-Tc3"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="userImage" destination="tf0-23-Esd" id="ICb-Q2-DO0"/>
-                <outlet property="userName" destination="Jbf-KZ-Fqd" id="x3h-3t-Dtx"/>
+                <outlet property="userImage" destination="6I8-PJ-sYf" id="Bn5-pJ-Hxj"/>
+                <outlet property="userNameLabel" destination="Jbf-KZ-Fqd" id="75S-Hp-HKH"/>
             </connections>
             <point key="canvasLocation" x="-276.3358778625954" y="253.52112676056339"/>
         </view>
