--- a/MoviesList/MovieList/SideMenuHeaderView.xib
+++ b/MoviesList/MovieList/SideMenuHeaderView.xib
@@ -16,8 +16,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LYA-vO-1XV">
                     <rect key="frame" x="0.0" y="0.0" width="192" height="162"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbf-KZ-Fqd">
-                            <rect key="frame" x="61" y="81" width="111" height="0.0"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" text="label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbf-KZ-Fqd">
+                            <rect key="frame" x="134" y="70.333333333333329" width="38" height="21.666666666666671"/>
                             <constraints>
                                 <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="lf9-ky-yj0"/>
                             </constraints>
@@ -25,21 +25,20 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6I8-PJ-sYf">
-                            <rect key="frame" x="5" y="40" width="40" height="42"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6I8-PJ-sYf">
+                            <rect key="frame" x="74" y="61" width="40" height="40"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="40" id="XIj-MN-UhC"/>
+                                <constraint firstAttribute="height" constant="40" id="1at-7i-UnH"/>
+                                <constraint firstAttribute="width" constant="40" id="D58-mo-gx4"/>
                             </constraints>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="Jbf-KZ-Fqd" firstAttribute="leading" secondItem="LYA-vO-1XV" secondAttribute="leading" priority="250" constant="61" id="0Ax-Av-0Ui"/>
-                        <constraint firstItem="Jbf-KZ-Fqd" firstAttribute="leading" secondItem="6I8-PJ-sYf" secondAttribute="trailing" constant="16" id="5em-r2-Qzi"/>
-                        <constraint firstItem="6I8-PJ-sYf" firstAttribute="leading" secondItem="LYA-vO-1XV" secondAttribute="leading" constant="5" id="Ae7-7n-BO4"/>
+                        <constraint firstItem="6I8-PJ-sYf" firstAttribute="centerY" secondItem="Jbf-KZ-Fqd" secondAttribute="centerY" id="DjA-pa-Ote"/>
                         <constraint firstItem="Jbf-KZ-Fqd" firstAttribute="centerY" secondItem="LYA-vO-1XV" secondAttribute="centerY" id="Dm4-sG-vvH"/>
-                        <constraint firstItem="6I8-PJ-sYf" firstAttribute="centerY" secondItem="LYA-vO-1XV" secondAttribute="centerY" id="OAx-S3-Fqr"/>
-                        <constraint firstItem="6I8-PJ-sYf" firstAttribute="centerY" secondItem="Jbf-KZ-Fqd" secondAttribute="centerY" id="fRM-qH-0G3"/>
+                        <constraint firstItem="Jbf-KZ-Fqd" firstAttribute="leading" secondItem="6I8-PJ-sYf" secondAttribute="trailing" constant="20" id="Tbl-39-aBc"/>
                         <constraint firstAttribute="trailing" secondItem="Jbf-KZ-Fqd" secondAttribute="trailing" constant="20" id="um4-Lr-VwH"/>
                     </constraints>
                 </view>
